opam-version: "2.0"
maintainer: "dev@clarus.me"
homepage: "https://github.com/clarus/io"
dev-repo: "git+https://github.com/clarus/io.git"
bug-reports: "https://github.com/clarus/io/issues"
authors: ["Guillaume Claret"]
license: "MIT"
build: [
  ["./configure.sh"]
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "coq" {>= "8.5"}
]
synopsis: "A library for effects in Coq"
tags: [
  "keyword:effects"
  "logpath:Io"
]
